Fix warnings in system tests